--- a/webserver/web/static/css/variables.css
+++ b/webserver/web/static/css/variables.css
@@ -14,7 +14,7 @@
     
     /* Colors - UI */
     --background: #FFF;
-    --background-secondary: #F9F9F9;
+    --background-secondary: #FAFAFA;
     --background-tertiary: #f0f0f0;
     
     --text-primary: #333;
